feat: Update favicon to Ionicons rose symbol

--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <ion-icon name="rose-outline"></ion-icon>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MIRA - Home Test Kit for Early Detection of Endometriosis</title>
-    <meta name="description" content="MIRA is a home test kit designed to help women get faster answers about endometriosis. Simple, private, and clinically backed early detection technology." />
-    <meta name="author" content="MIRA Health Technologies" />
-
-    <meta property="og:title" content="MIRA - Home Endometriosis Test Kit" />
-    <meta property="og:description" content="A simple at-home test to help women get answers faster. Early detection technology for endometriosis." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
