--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <ion-icon name="rose-outline"></ion-icon>
+<link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MIRA - Home Test Kit for Early Detection of Endometriosis</title>
   </head>
